project/todo_backend/backend_manifests/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project-namespace
  labels:
    app: postgres 
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: postgres
  clusterIP: None
