project/todo_backend/backend_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project-namespace
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 80
      targetPort: 8080
